# python-project-52

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  build.sh  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
task_manager/: mixins.py  models.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labeling_task.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0003_task_labels.py  0004_alter_task_labels.py
task_manager/templates/: base.html  greetings.html  users_index.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_index.html
task_manager/templates/registration/: logged_out.html  login.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_index.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_details.html  task_update.html  tasks_index.html
task_manager/templates/users/: create.html  index.html  update.html  user_create.html  user_delete.html  (+1 more)
task_manager/tests/: test_create_user.py  test_delete_user.py  test_update_user.py
task_manager/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
(+25 files in other folders)
