[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-bootstrap5>=24.3",
    "django>=5.1.4",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.34.0",
    "whitenoise[brotli]>=6.8.2",
    "crispy-bootstrap5>=2024.10",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-crispy-forms>=2.3",
    "rollbar>=1.1.2",
    "coverage>=7.6.10",
    "environs>=14.1.0",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.6",
]
